# amalia2.0

./: .gitignore  README.md  pyproject.toml
docs/: index.html
examples/: basic_chat.py
src/amalia2/: __init__.py  cli.py  client.py
