[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amalia2"
version = "0.1.0-alpha"
description = "Modern Python SDK, CLI & boilerplate for Amália — Portugal's National LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Joshua Almeida", email = "fitzyracing1@example.com"}
]
keywords = ["llm", "portuguese", "amalia", "sdk", "cli", "agents", "pt-pt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "typer[all]>=0.12.0",
]

[project.optional-dependencies]
cli = ["typer[all]>=0.12.0", "rich>=13.7.0"]
chat = ["textual>=0.70.0"]
agents = ["pydantic-ai>=0.0.1"]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "mypy>=1.10.0",
]

[project.scripts]
amalia2 = "amalia2.cli:main"

[project.urls]
Homepage = "https://github.com/fitzyracing1/Amalia2.0"
Documentation = "https://fitzyracing1.github.io/Amalia2.0"
Repository = "https://github.com/fitzyracing1/Amalia2.0"
Issues = "https://github.com/fitzyracing1/Amalia2.0/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/amalia2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true